...
              </Text>
              <Controller
                control={control}
                name="title"
                render={({ field: { onChange, onBlur, value } }) => (
                  <TextInput
                    placeholder="Enter your complain"
                    value={value}
                    onChangeText={onChange}
                    onBlur={onBlur}
                    style={{
                      color: "#22577a",
                      backgroundColor: "#f6fff8",
...
              </Text>
              <Controller
                control={control}
                name="description"
                render={({ field: { onChange, onBlur, value } }) => (
                  <TextInput
                    placeholder="Enter Description"
                    value={value}
                    onChangeText={onChange}
                    onBlur={onBlur}
                    style={{
                      color: "#22577a",
                      backgroundColor: "#f6fff8",
...
                style={{ backgroundColor: "#38a3a5" }}
                labelStyle={{ color: "#fff", fontWeight: "bold" }}
                className="mt-5"
                loading={uploading}
                disabled={uploading}
              >
                {uploading ? "Submitting..." : "Add Complain"}
              </Button>
            </View>
          </View>
        </KeyboardAvoidingView>
      </SafeAreaView>
    </SafeAreaProvider>
...
