...
              <IconButton
                icon="close"
                className="bg-[#57cc99]"
                size={18}
                mode="contained"
                onPress={onClose}
                testID="close-comment-modal"
              />
            </View>

            {/* Header */}
            <Text className="font-bold text-2xl text-[#22577a] mb-4 ">
              Comments
            </Text>

            <View style={{ flex: 1 }}>
              <CommentSection
                entityType={entityType}
                entityId={entityId || ""}
...
