...
        <View>
          <TextInput
            value={newCommentText}
            multiline
            mode="outlined"
            onChangeText={setNewCommentText}
            placeholder="Write a comment..."
            testID="comment-input"
            numberOfLines={3}
            style={{
              minHeight: 80,
              maxHeight: 120,
            }}
...
              mode="contained"
              style={{ backgroundColor: "#38a3a5", paddingVertical: 2 }}
              labelStyle={{ color: "#fff", fontWeight: "bold", fontSize: 14 }}
              onPress={editingComment ? handleUpdateComment : handleAddComment}
              disabled={isSubmitting || !newCommentText.trim()}
              loading={isSubmitting}
              testID="send-comment-button"
            >
              {editingComment ? "Update" : "Add"}
            </Button>
          </View>
        </View>
      </View>
...
